--- a/css/estilos2colibri1.css
+++ b/css/estilos2colibri1.css
@@ -36,7 +36,7 @@
 
 header {
     height: 100vh;
-    background-image: url(../Multi/logo.png);
+    background-image: url(../multi/logo.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
